--- a/dakshesh-httpd-pod.yml
+++ b/dakshesh-httpd-pod.yml
@@ -8,4 +8,4 @@ metadata:
 spec:
  containers:
    - name: dakshesh-apache-pod
-     image: daksheshrao/demo-repository:latest
+     image: daksheshrao/httpd:1.0
