--- a/dakshesh-httpd-service.yml
+++ b/dakshesh-httpd-service.yml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
- name: dakshesh-httpd-service
- namespace: dakshesh
+  name: dakshesh-httpd-service
+  namespace: dakshesh
 spec:
- type: NodePort
- ports:
-   - port: 81
-     targetPort: 81
-     nodePort: 30013
- selector:
-   file: httpd
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 81
+  selector:
+    file: httpd
